Added Ender Dragon, Wither, and Witch to combat experience multipliers
They do not give any XP by default.

Fixes #1763

--- a/src/main/resources/experience.yml
+++ b/src/main/resources/experience.yml
@@ -173,5 +173,8 @@ Experience:
             Silverfish: 3.0
             Blaze: 3.0
             Magma_Cube: 2.0
+            Ender_Dragon: 0.0
+            Wither: 0.0
+            Witch: 0.0
             Iron_Golem: 2.0
             Wither_Skeleton: 4.0
