Update pom.xml with md_5 Maven repo settings

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,10 @@
             <url>http://repo.bukkit.org/content/groups/public/</url>
         </repository>
         <repository>
+            <id>md_5-releases</id>
+            <url>http://repo.md-5.net/content/repositories/releases/</url>
+        </repository>
+        <repository>
             <id>Plugin MetricsExtension</id>
             <url>http://repo.turt2live.com</url>
         </repository>
@@ -135,9 +139,13 @@
     </dependencies>
     <distributionManagement>
         <repository>
-            <id>mcmmo-repo</id>
-            <url>file:///var/lib/jenkins/repo</url>
+            <id>md_5-releases</id>
+            <url>http://repo.md-5.net/content/repositories/releases/</url>
         </repository>
+        <snapshotRepository>
+            <id>md_5-snapshots</id>
+            <url>http://repo.md-5.net/content/repositories/snapshots/</url>
+        </snapshotRepository>
     </distributionManagement>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
