Compile with RELEASE to remain 1.6 compatibility for now

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>LATEST</version>
+            <version>RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
