--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -267,7 +267,8 @@ Skills:
         Prevent_AFK_Leveling: true
         Max_Tries_At_Same_Location: 3
         Prevent_Dodge_Lightning: false
-        Prevent_XP_After_Teleport: true
+        # Prevent earning Acrobatics XP a few seconds after teleporting
+        XP_After_Teleport_Cooldown: 5
         Level_Cap: 0
     Alchemy:
         # Allow Hoppers to transfer ingredients and brew Rank 1 Alchemy potions
