--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -317,16 +317,24 @@ Skills:
         Enabled_For_PVE: true
         Level_Cap: 0
         Call_Of_The_Wild:
-            Bones_Required: 10
-            Fish_Required: 10
-            Apples_Required: 10
+            # Item_Material: Material of the item needed to summon the pet
+            # Item_Amount: Amount of items required to summon the pet
+            # Summon_Amount: Amount of pets to summon when using Call Of The Wild
+            Wolf:
+                Item_Material: BONE
+                Item_Amount: 10
+                Summon_Amount: 1
+            Ocelot:
+                Item_Material: RAW_FISH
+                Item_Amount: 10
+                Summon_Amount: 1
+            Horse:
+                Item_Material: APPLE
+                Item_Amount: 10
+                Summon_Amount: 1
 
             # Range to check for nearby pets when using Call Of The Wild, 0 will disable the check
             Range: 40.0
-            # Amount of pets to summon when using Call Of The Wild
-            Wolf_Amount: 1
-            Ocelot_Amount: 1
-            Horse_Amount: 1
     Unarmed:
         Enabled_For_PVP: true
         Enabled_For_PVE: true
