Add mcmmo.skills.salvage permission to plugin.yml
Fixes issue where players would have access to the Salvage child skill
by default.

Mentioned in #2075

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1954,6 +1954,11 @@ permissions:
         children:
             mcmmo.ability.repair.all: true
             mcmmo.commands.repair: true
+    mcmmo.skills.salvage:
+        description: Allows access to the Salvage skill
+        children:
+            mcmmo.ability.salvage.all: true
+            mcmmo.commands.salvage: true
     mcmmo.skills.smelting:
         description: Allows access to the Smelting skill
         children:
