--- a/src/main/resources/mods/tools.default.yml
+++ b/src/main/resources/mods/tools.default.yml
@@ -3,7 +3,7 @@
 ###
 Axes:
     Axe_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -12,7 +12,7 @@ Axes:
         Repair_Material_Quantity: 9
         Durability: 9999
     Axe_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -25,7 +25,7 @@ Axes:
 ###
 Bows:
     Bow_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -34,7 +34,7 @@ Bows:
         Repair_Material_Quantity: 9
         Durability: 9999
     Bow_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -47,7 +47,7 @@ Bows:
 ###
 Hoes:
     Hoe_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -56,7 +56,7 @@ Hoes:
         Repair_Material_Quantity: 9
         Durability: 9999
     Hoe_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -69,7 +69,7 @@ Hoes:
 ###
 Pickaxes:
     Pickaxe_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -78,7 +78,7 @@ Pickaxes:
         Repair_Material_Quantity: 9
         Durability: 9999
     Pickaxe_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -91,7 +91,7 @@ Pickaxes:
 ###
 Shovels:
     Shovel_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -100,7 +100,7 @@ Shovels:
         Repair_Material_Quantity: 9
         Durability: 9999
     Shovel_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -113,7 +113,7 @@ Shovels:
 ###
 Swords:
     Sword_1:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
@@ -122,7 +122,7 @@ Swords:
         Repair_Material_Quantity: 9
         Durability: 9999
     Sword_2:
-        XP_Modifer: 1.0
+        XP_Modifier: 1.0
         Ability_Enabled: true
         Tier: 1
         Repairable: true
