--- a/src/main/resources/mods/tools.default.yml
+++ b/src/main/resources/mods/tools.default.yml
@@ -24,6 +24,10 @@
 ## This is typically the number of the repair material needed to create a new item, for example for a sword it is 2, for an axe it is 3
 ## This defaults to 9
 #
+# Repair_Material_Pretty_Name: The pretty name of the repair material.
+## Used in the feedback message when not enough repair materials are found.
+## This defaults to the Repair_Material converted to string.
+#
 # Repair_MinimumLevel: This is the minimum repair level needed to repair this item.
 ## Valid values are => 0
 ## This defaults to 0
@@ -47,6 +51,7 @@ Axes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -58,6 +63,7 @@ Axes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -73,6 +79,7 @@ Bows:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -84,6 +91,7 @@ Bows:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -99,6 +107,7 @@ Hoes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -110,6 +119,7 @@ Hoes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -125,6 +135,7 @@ Pickaxes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -136,6 +147,7 @@ Pickaxes:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -151,6 +163,7 @@ Shovels:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -162,6 +175,7 @@ Shovels:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -177,6 +191,7 @@ Swords:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
@@ -188,6 +203,7 @@ Swords:
         Repair_Material: REPAIR_MATERIAL_NAME
         Repair_Material_Data_Value: 0
         Repair_Material_Quantity: 9
+        Repair_Material_Pretty_Name: Repair Item Name
         Repair_MinimumLevel: 0
         Repair_XpMultiplier: 1.0
         Durability: 9999
