--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -352,6 +352,9 @@ Skills:
         Level_Cap: 0
         Block_Cracker:
             SmoothBrick_To_CrackedBrick: true
+        # When using Unarmed, picked up items will automatically get moved to a free slot instead of going in the slot
+        # of your hand. Should item pickup be disabled when your entire inventory - except for your hand - is full?
+        Item_Pickup_Disabled_Full_Inventory: true
     Woodcutting:
         Tree_Feller_Sounds: true
         Level_Cap: 0
